--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,12 @@ importFrom("methods", "as")
 importFrom("RSpectra","eigs_sym");
 
 
-S3method(print,loadings)
+S3method(print,fad.fit.X)
+S3method(print,fad.fit.cor)
+S3method(print,rotation)
 S3method(print,fad)
-export(loadings)
+export(fad.fit.X)
+export(fad.fit.cor)
+export(rotation)
 export(fad)
 
