--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Author: Somak Dutta [aut, cre],
 Maintainer: Somak Dutta <somakd@iastate.edu>
 Description: Performs maximum likelihood estimation of factor models for Gaussian data. The fad() function provides a replacement and extension of the factanal() function to analyze data in low or high-dimensional problems.
 License: GPL-3
+VignetteBuilder: knitr
 URL: https://github.com/somakd/fad
 Encoding: UTF-8
 Depends: R (>= 3.0.2), methods, RSpectra
