--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,21 @@
 Package: fad
 Type: Package
 Title: Factor Analysis for Data
-Version: 0.1-3
-Date: 2019-12-09
-Author: Somak Dutta [aut, cre],
-  Fan Dai [aut]
-  Ranjan Maitra [ctb]
+Version: 0.1-4
+Date: 2019-12-20
+Authors@R: c(
+    person("Somak", "Dutta", , "somakd@iastate.edu", c("aut", "cre")),
+    person("Fan", "Dai", , "fd43@iastate.edu", "aut"),
+    person("Ranjan", "Maitra", , "maitra@iastate.edu", "ctb")
+    )
 Maintainer: Somak Dutta <somakd@iastate.edu>
-Description: Performs maximum likelihood estimation of factor models for Gaussian data. The fad() function provides a replacement and extension of the factanal() function to analyze data in low or high-dimensional problems.
-License: GPL-3 | file LICENSE
+Description: Compute maximum likelihood estimators of parameters in a Gaussian factor model using
+  the the matrix-free methodology described in Dai et al. (2020+) <doi:10.1080/10618600.2019.1704296>.
+  In contrast to the "factanal" function from "stats" package, fad can handle high-dimensional datasets where
+  number of variables exceed the sample size and is also substantially faster than the EM algorithms.
+License: GPL-3
 URL: https://github.com/somakd/fad
+BugReports: https://github.com/somakd/fad/issues
 Encoding: UTF-8
 Depends: R (>= 3.0.2), methods, RSpectra
 Imports: Matrix (>= 1.1-0), Rcpp (>= 0.11.5)
@@ -18,4 +24,4 @@ LazyData: true
 NeedsCompilation: yes
 Suggests: knitr
 VignetteBuilder: knitr
-RoxygenNote: 7.0.0
+RoxygenNote: 7.0.2
