--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ License: GPL-3
 URL: https://github.com/somakd/fad
 BugReports: https://github.com/somakd/fad/issues
 Encoding: UTF-8
-Depends: R (>= 3.0.2), methods, RSpectra
+Depends: R (>= 3.0.2), methods, RSpectra (>= 0.16-0)
 Imports: Matrix (>= 1.1-0), Rcpp (>= 0.11.5)
 LinkingTo: Rcpp
 LazyData: true
