--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ BugReports: https://github.com/somakd/fad/issues
 Encoding: UTF-8
 Depends: R (>= 3.0.2), methods, RSpectra (>= 0.16-0)
 Imports: Matrix (>= 1.1-0), Rcpp (>= 0.11.5)
-LinkingTo: Rcpp
+LinkingTo: Rcpp, RSpectra, RcppEigen
 LazyData: true
 NeedsCompilation: yes
 Suggests: knitr
