--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: fad
 Type: Package
 Title: Factor Analysis for Data
-Version: 0.9-1
-Date: 2022-04-27
+Version: 0.9-2
+Date: 2024-02-10
 Authors@R: c(
     person("Somak", "Dutta", , "somakd@iastate.edu", c("aut", "cre")),
     person("Fan", "Dai", , "fd43@iastate.edu", "aut"),
@@ -21,6 +21,6 @@ Depends: R (>= 3.0.2), methods, RSpectra (>= 0.16-1)
 Imports: Matrix (>= 1.1-0), Rcpp (>= 0.11.5)
 LinkingTo: Rcpp, RSpectra, RcppEigen
 NeedsCompilation: yes
-Suggests: knitr
+Suggests: knitr, GPArotation
 VignetteBuilder: knitr
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
